turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:13: error: not found: value getSolCouleur
  while(colors(i)!=getSolCouleur()){
                   ^